--- a/index.html
+++ b/index.html
@@ -8,91 +8,78 @@
     <title>Cassav music band</title>
 </head>
 <body>
-    <header>
-        <h1 id="title-logo">Cassav band </h1>
+  <!--Main page container-->
+  <div class="container">
+    <!--Page Header-->
+    <header class="row mb-5">
+      <h1 id="title-logo">Cassav band </h1>
     </header>
-    <!--Carousel Hero-->
-    <div class="container pt-4">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./img/kulungu-img1.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./img/kulungu-img2.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./img/kulungu-img3.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./img/kulungu-img4.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./img/kulungu-img5.jpg" class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </a>
+    <!--Page Hero-->
+    <div class="row mb-5">
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"></li>
+          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./img/kulungu-img1.jpg" class="d-block w-100" alt="...">
           </div>
-    </div>
-    <!--Main section-->
-    <main>
-        <div class="container bg-dark mt-4 pt-4">
-            <div class="row mt-4 mb-4">
-                <div class="col-md-4">
-                    <p>
-                        Kassav' was formed in 1979 by Pierre-Edouard Décimus (former musicians from the Les Vikings de Guadeloupe) and Paris studio musician Jacob F. Desvarieux. 
-                        Together and under the influence of well-known Dominican, Haitian and Guadeloupean kadans or compas bands like Experience 7, Grammacks, Exile One, Les Aiglons,
-                        Tabou Combo, Les Freres Dejean, etc., they decided to make Guadeloupean carnival music recording it in a more fully orchestrated yet modern and polished style. 
-                        The name of the band is Antillean Creole for a local dish made from cassava root.
-                    </p>
-                </div>
-                <div class="col-md-8">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/SxmGEWd5nIc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-            </div>
+          <div class="carousel-item">
+            <img src="./img/kulungu-img2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./img/kulungu-img3.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./img/kulungu-img4.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./img/kulungu-img5.jpg" class="d-block w-100" alt="...">
+          </div>
         </div>
-    </main>
-    <!--Side section-->
-    <aside class="bg-dark pt-4 mt-4">
-        <h4>Tour dates</h4>
-        <dl>
-            <div class="d-flex p-2 bd-highlight">
-                <dt>Lubumbashi :</dt>
-                <dd>23rd feb</dd>
-            </div>
-            <div class="d-flex p-2 bd-highlight">
-                <dt>Kalemie :</dt>
-                <dd>02 of March</dd>
-            </div>
-            <div class="d-flex p-2 bd-highlight">
-                <dt>Kigali :</dt>
-                <dd>04th of March</dd>
-            </div>
-            <div class="d-flex p-2 bd-highlight">
-                <dt>Bamako :</dt>
-                <dd>25th of March</dd>
-            </div>
-            <div class="d-flex p-2 bd-highlight">
-                <dt>Goma :</dt>
-                <dd>06 of April</dd>
-            </div>
-       </dl>
-    </aside>
-    <footer class="bg-dark">
-        <p>&copy; C Rukamiza February 2021</p>
-    </footer>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </a>
+      </div>
+    </div>
+    <!--Main content section-->
+    <div class="row mb-5">
+      <div class="col-md-4 bg-dark">
+        <h2 class="text-info text-center">About cassav</h2>
+        <p class="px-2 py-2 text-light">
+          Kassav' was formed in 1979 by Pierre-Edouard Décimus (former musicians from the Les Vikings de Guadeloupe) and Paris studio musician Jacob F. Desvarieux. 
+          Together and under the influence of well-known Dominican, Haitian and Guadeloupean kadans or compas bands like Experience 7, Grammacks, Exile One, Les Aiglons,
+          Tabou Combo, Les Freres Dejean, etc., they decided to make Guadeloupean carnival music recording it in a more fully orchestrated yet modern and polished style. 
+          The name of the band is Antillean Creole for a local dish made from cassava root.
+        </p>
+      </div>
+      <div class="col-md-5 bg-dark px-5 py-5">
+        <iframe width="100%" height="100%" title="Cassav concert" src="https://www.youtube.com/embed/SxmGEWd5nIc" frameborder="0"  allowfullscreen></iframe>
+      </div>
+      <div class="col-md-3 text-light">
+        <ul class="list-group bg-dark">
+          <h2 class="text-info text-center ">Tour dates</h2>
+          <li class="list-group-item bg-dark"> Lumbumbashi: 23th of february</li>
+          <li class="list-group-item bg-dark">Kalemie: 2nd of March</li>
+          <li class="list-group-item bg-dark">Kigali: 4th of March</li>
+          <li class="list-group-item bg-dark">Bamako: 25th of March</li>
+          <li class="list-group-item bg-dark">Goma: 6th of April</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <footer class=" row bg-dark">
+    <p>&copy; C Rukamiza February 2021</p>
+  </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </html>
